--- a/src/TestInfrastructure/packages.config
+++ b/src/TestInfrastructure/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="14.0.25424" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
