--- a/src/Integration.Vsix/packages.config
+++ b/src/Integration.Vsix/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="14.0.25424" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
