--- a/src/Integration/packages.config
+++ b/src/Integration/packages.config
@@ -7,6 +7,7 @@
   <package id="EnvDTE90a" version="9.0.0" targetFramework="net46" />
   <package id="Microsoft.Alm.Authentication" version="4.0.0.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="14.0.25424" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
