--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -5,7 +5,20 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <TargetFrameworkProfile />
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Condition="$(VisualStudioVersion)=='14.0'" Include="Manifests\VS2015\source.extension.vsixmanifest" />
+    <None Condition="$(VisualStudioVersion)=='15.0'" Include="Manifests\VS2017\source.extension.vsixmanifest" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <VersionSpecificSuffix>UNKNOWN_VS_VERSION</VersionSpecificSuffix>
+    <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='14.0'">2015</VersionSpecificSuffix>
+    <VersionSpecificSuffix Condition="$(VisualStudioVersion)=='15.0'">2017</VersionSpecificSuffix>
+  </PropertyGroup>
+
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -15,7 +28,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SonarLint.VisualStudio.Integration.Vsix</RootNamespace>
-    <AssemblyName>SonarLint</AssemblyName>
+    <AssemblyName>SonarLint.$(VersionSpecificSuffix)</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -32,7 +45,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\VS$(VersionSpecificSuffix)\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,7 +55,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\VS$(VersionSpecificSuffix)\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -95,9 +108,6 @@
     </None>
     <None Include="SonarLintTracker\README.md" />
     <None Include="Telemetry\SonarLintSqmData.ttinclude" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="source.extension.vsixmanifest" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -476,6 +486,7 @@
     <Content Include="..\..\LICENSE">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
+      <Link>LICENSE</Link>
     </Content>
     <Content Include="Resources\CommandIcons.png" />
     <Content Include="Resources\sonarlint_32.png">
@@ -509,8 +520,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Target Name="CopyVsixToBinaries" AfterTargets="Build" Inputs="$(TargetDir)SonarLint.vsix" Outputs="$(SolutionDir)binaries\SonarLint.2015.vsix">
-    <Copy OverwriteReadOnlyFiles="true" SourceFiles="$(TargetDir)SonarLint.vsix" DestinationFiles="$(SolutionDir)binaries\SonarLint.2015.vsix" />
+  <Target Name="CopyVsixToBinaries" AfterTargets="Build" Inputs="$(TargetDir)$(AssemblyName).vsix" Outputs="$(SolutionDir)binaries\$(AssemblyName).vsix">
+    <Message Importance="high" Text="Copying vsix from $(TargetDir)$(AssemblyName).vsix to $(SolutionDir)binaries\$(AssemblyName).vsix" />
+    <Copy OverwriteReadOnlyFiles="true" SourceFiles="$(TargetDir)$(AssemblyName).vsix" DestinationFiles="$(SolutionDir)binaries\$(AssemblyName).vsix" />
   </Target>
   <Import Project="..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets" Condition="Exists('..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
