--- a/src/Integration.TeamExplorer.UnitTests/Integration.TeamExplorer.UnitTests.csproj
+++ b/src/Integration.TeamExplorer.UnitTests/Integration.TeamExplorer.UnitTests.csproj
@@ -234,16 +234,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectSectionViewModelTests.cs" />
-    <Compile Include="Framework\ConfigurableTeamExplorer.cs" />
-    <Compile Include="Framework\ConfigurableTeamExplorerPage.cs" />
-    <Compile Include="HostedCommandControllerBaseTests.cs" />
-    <Compile Include="Progress\ProgressStepRunnerTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SectionControllerTests.cs" />
-    <Compile Include="SonarQubeNavigationItemTests.cs" />
-    <Compile Include="SonarQubePageTests.cs" />
-    <Compile Include="TeamExplorerControllerTests.cs" />
+    <Compile Include="**\*.cs" Exclude="**\obj\**\*" />
     <Compile Include="..\AssemblyInfo.Shared.cs">
       <Link>Properties\AssemblyInfo.Shared.cs</Link>
     </Compile>
