--- a/src/Integration.TeamExplorer.UnitTests/packages.config
+++ b/src/Integration.TeamExplorer.UnitTests/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net46" />
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.0" targetFramework="net46" />
-  <package id="FluentAssertions" version="5.1.2" targetFramework="net46" />
+  <package id="FluentAssertions" version="5.6.0" targetFramework="net46" />
   <package id="Microsoft.Alm.Authentication" version="4.0.0.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
@@ -30,7 +30,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
-  <package id="Moq" version="4.8.1" targetFramework="net46" />
+  <package id="Moq" version="4.10.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="NuGet.Core" version="2.12.0" targetFramework="net46" />
   <package id="NuGet.Versioning" version="3.4.3" targetFramework="net46" />
@@ -38,6 +38,7 @@
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="stdole" version="7.0.3300" targetFramework="net46" />
   <package id="StrongNamer" version="0.0.8" targetFramework="net46" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
 </packages>
