--- a/src/Progress.UnitTests/packages.config
+++ b/src/Progress.UnitTests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
-  <package id="FluentAssertions" version="5.1.2" targetFramework="net46" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net46" />
+  <package id="FluentAssertions" version="5.6.0" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net46" />
@@ -19,7 +19,8 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
-  <package id="Moq" version="4.8.1" targetFramework="net46" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
+  <package id="Moq" version="4.10.1" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
 </packages>
